name:                doubt
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/has256/doubt#readme
license:             BSD3
license-file:        LICENSE
author:              Carlos EA. Batista
maintainer:          abreu.carlos@aluno.ufabc.edu.br
copyright:           2021 Carlos EA. Batista
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable doubt
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
